fix(pdf): chasse aux inputs, reorganisation fonctions, ajout pdf partout

--- a/05-bases/01-structure-programme.ipynb
+++ b/05-bases/01-structure-programme.ipynb
@@ -5,9 +5,27 @@
    "metadata": {},
    "source": [
     "# La structure d'un programme\n",
+    "(code sous licence creative commun CC BY-NC-SA BY Alexis Dendiével)\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ":download:`Télécharger le pdf <https://pyspc.readthedocs.io/fr/latest/05-bases/01-structure-programme.pdf>`\n",
     "\n",
-    "(code sous licence creative commun CC BY-NC-SA BY Alexis Dendiével)\n",
-    "## structure général d'un programme\n",
+    ":download:`Télécharger le notebook <https://pyspc.readthedocs.io/fr/latest/05-bases/01-structure-programme.ipynb>`\n",
+    "\n",
+    ":download:`Lancer le notebook sur binder (lent) <https://mybinder.org/v2/gh/jmbarbier/pyspc/master?filepath=05-bases%2F01-structure-programme.ipynb>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Structure général d'un programme\n",
     "\n",
     "elle correspond pour un programme simple au déroulé suivant\n",
     "\n",
@@ -17,7 +35,7 @@
     "- corps de programme\n",
     "- affichage des résultats.\n",
     "\n",
-    "## l'importance du commentaire\n",
+    "## L'importance du commentaire\n",
     "Les commentaires dans un programme sont d'une importance capitale. ils servent:\n",
     "- à l'auteur du programme \n",
     "- au lecteur du programme\n",
@@ -54,10 +72,10 @@
      "output_type": "stream",
      "text": [
       "nous nous nous proposons de calculer la force de gravitation s'exerçant entre deux masses m1 et m2 séparées d'une distance d\n",
-      "Entrer la valeur de la masse m1 (en kg): 50\n",
-      "Entrer la valeur de la masse m2 (en kg): 50\n",
-      "Entrer la distance (en mètre) séparant m1 et m2 2\n",
-      "la valeur de la force de gravitation est:          4.17e-08  N\n"
+      "masse m1 : 5.00e+01 kg\n",
+      "masse m2 : 7.05e+01 kg\n",
+      "masse d : 2.50e+00 m\n",
+      "==> la valeur de la force de gravitation est: 3.76e-08 N\n"
      ]
     }
    ],
@@ -65,52 +83,17 @@
     "G = 6.67e-11\n",
     "print(\"nous nous nous proposons de calculer la force de gravitation \"\n",
     "      \"s'exerçant entre deux masses m1 et m2 séparées d'une distance d\")\n",
-    "m1 = float(input('Entrer la valeur de la masse m1 (en kg): '))\n",
-    "m2 = float(input('Entrer la valeur de la masse m2 (en kg): '))\n",
-    "d = float(input('Entrer la distance (en mètre) séparant m1 et m2 '))\n",
+    "# Masse m1 en kg\n",
+    "m1 = 50\n",
+    "# Masse m2 en kg\n",
+    "m2 = 70.5\n",
+    "# Distance d en mètres\n",
+    "d = 2.5\n",
     "FG = G*m1*m2/d**2\n",
-    "print('{:50}'.format(\"la valeur de la force de gravitation est: \"), \n",
-    "      \"{0:.2e}\".format(FG), ' N')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nous nous nous proposons de calculer la force de gravitation s'exerçant entre deux masses m1 et m2 séparées d'une distance d\n",
-      "Entrer la valeur de la masse m1 (en kg): 50\n",
-      "Entrer la valeur de la masse m2 (en kg): 50\n",
-      "Entrer la distance (en mètre) séparant m1 et m2 2\n",
-      "la valeur de la force de gravitation est:          4.17e-08  N\n"
-     ]
-    }
-   ],
-   "source": [
-    "# programme calculant la force de gravitation entre deux masses m1 et m2 séparées par une distance d\n",
-    "\n",
-    "# la constantes utilisée\n",
-    "G = 6.67e-11\n",
-    "\n",
-    "# présentation du programme\n",
-    "print(\"nous nous nous proposons de calculer la force de gravitation \"\n",
-    "      \"s'exerçant entre deux masses m1 et m2 séparées d'une distance d\")\n",
-    "\n",
-    "# entrée des données\n",
-    "m1 = float(input('Entrer la valeur de la masse m1 (en kg): '))\n",
-    "m2 = float(input('Entrer la valeur de la masse m2 (en kg): '))\n",
-    "d = float(input('Entrer la distance (en mètre) séparant m1 et m2 '))\n",
-    "\n",
-    "# calcul de la force\n",
-    "FG = G*m1*m2/d**2\n",
-    "\n",
-    "# impression du résultat avec trois chiffres dsignificatifs.\n",
-    "print('{:50}'.format(\"la valeur de la force de gravitation est: \"),\n",
-    "      \"{0:.2e}\".format(FG), ' N')\n"
+    "print(\"masse m1 : {0:.2e} kg\".format(m1))\n",
+    "print(\"masse m2 : {0:.2e} kg\".format(m2))\n",
+    "print(\"masse d : {0:.2e} m\".format(d))\n",
+    "print(\"==> la valeur de la force de gravitation est: {0:.2e} N\".format(FG))"
    ]
   },
   {
@@ -128,30 +111,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## les noms de variable\n",
-    "Rien ni personne n'oblige à utiliser tel ou tel nom de variable dans python. Ce langage étant orienté objet, la variable n'a pas à être défini au début du programme, elle pointe sur un objet et en présente les caractéristiques.\n",
+    "## Les noms de variable\n",
+    "Rien ni personne n'oblige à utiliser tel ou tel nom de variable dans python. La variable n'a pas à être défini au début du programme, elle pointe sur un objet et en présente les caractéristiques; en revanche, il est obligatoire d'avoir assigné une valeur à une variable **avant** de l'utiliser.\n",
     "\n",
     "Il est cependant fortement recommandé d'utiliser des noms de variables donnant sens au programme, pour plus de clarté envers les personnes susceptibles de le lire ou de le modifier. exemples:\n",
+    "\n",
     "- \"atome\" plutôt que \"a\"\n",
     "- \"forcedegravitation\" plutôt que \"f\"\n",
     "- \"temps\" plutôt que \"t\"\n",
-    "..."
+    "...\n",
+    "\n",
+    "Une variable peut être écrite en majuscule ou minuscules, voire même avec des accents, mais les bonnes pratiques incitent plus à utiliser des minuscules pour les variables, sans accents, et en séparant les mots par des \"underscore\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "élément=12 # mal\n",
+    "element=12 # bien\n",
+    "Numéroatomique=12 # mal\n",
+    "numero_atomique=12 # bien"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-c80d00387f69>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-c80d00387f69>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    numero atomique=12\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# très mal (pas possible, en fait)\n",
+    "numero atomique=12 "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## l'importance de l'indentation\n",
-    "Un programme python n'a pas de code pour son début et sa fin. Sa structuration suit une indentation qui définit la structuration du programme.\n",
+    "## L'importance de l'indentation\n",
+    "Un programme python n'a pas de code pour le début et la fin d'une séquence d'instructions. Sa structuration suit une indentation (espaces en début de ligne) qui définit la structuration du programme.\n",
     "\n",
     "le \":\" après les instructions tabule automatiquement la ligne suivante.\n",
+    "\n",
     "Pour une instruction else suivant un if par exemple, il faut revenir en arrière afin que la structure soit correcte et lisible."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## quelques bibliothèques en python\n",
+    "## Quelques bibliothèques en python\n",
     "Même si la bibliothèque standard python est bien développée, certaines bibliothèques sont bien utiles:\n",
     "### numpy\n",
     "C'est une bibliothèque très utile pour les calculs numériques."
@@ -189,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -314,18 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "29\n",
-      "6\n",
-      "62\n",
-      "81\n"
+      "81\n",
+      "93\n",
+      "52\n",
+      "72\n",
+      "94\n"
      ]
     }
    ],
@@ -389,12 +407,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## conclusion\n",
+    "## Conclusion\n",
     "Ce notebook donne les premiers conseils afin de structurer un programme python. Ce qu'il faut retenir, c'est la recherche de la clarté tant dans le code que dans les commentaires. "
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Format de la Cellule Texte Brut",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
