--- a/05-bases/02-variables_input_print.ipynb
+++ b/05-bases/02-variables_input_print.ipynb
@@ -6,9 +6,27 @@
    "source": [
     "# Affectation des variables et impression des résultats\n",
     "\n",
-    "(code sous licence creative commun CC BY-NC-SA BY Alexis Dendiével)\n",
+    "(code sous licence creative commun CC BY-NC-SA BY Alexis Dendiével)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ":download:`Télécharger le pdf <https://pyspc.readthedocs.io/fr/latest/05-bases/02-variables_input_print.pdf>`\n",
     "\n",
-    "## les differents types de variables\n",
+    ":download:`Télécharger le notebook <https://pyspc.readthedocs.io/fr/latest/05-bases/02-variables_input_print.ipynb>`\n",
+    "\n",
+    ":download:`Lancer le notebook sur binder (lent) <https://mybinder.org/v2/gh/jmbarbier/pyspc/master?filepath=05-bases%2F02-variables_input_print.ipynb>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Les differents types de variables\n",
     "Python est un langage objet, l'affectation du type de variable se fait par l'objet, il n'est donc pas nécessaire de déclarer le type d'une variable.\n",
     "\n",
     "Il existe plusieurs types d'objets:\n",
@@ -136,7 +154,11 @@
     "\n",
     "## la fonction input\n",
     "\n",
-    "quand on demande à l'utilisateur d'entrer une grandeur, on utilise la commande input. Il faut cependant faire attention au type de grandeur:"
+    "### Présentation\n",
+    "\n",
+    "**Attention, l'utilisation de `input` est fortement déconseillée, il vaut mieux utiliser des fonctions, voir un peu après**. \n",
+    "\n",
+    "Quand on demande à l'utilisateur d'entrer une grandeur, on utilise la commande input. Il faut cependant faire attention au type de grandeur:"
    ]
   },
   {
@@ -148,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer un nombre entier12\n"
+      "entrer un nombre entier : 42\n"
      ]
     },
     {
@@ -163,7 +185,7 @@
     }
    ],
    "source": [
-    "n = input (\"entrer un nombre entier\")\n",
+    "n = input (\"entrer un nombre entier : \")\n",
     "type(n)"
    ]
   },
@@ -184,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer un nombre entier44\n"
+      "entrer un nombre entier : 42\n"
      ]
     },
     {
@@ -199,7 +221,7 @@
     }
    ],
    "source": [
-    "n = int(input(\"entrer un nombre entier\"))\n",
+    "n = int(input(\"entrer un nombre entier : \"))\n",
     "type(n)"
    ]
   },
@@ -212,13 +234,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer un nombre :12.5\n",
-      "12.5\n"
+      "entrer un nombre : 42.42\n",
+      "42.42\n"
      ]
     }
    ],
    "source": [
-    "n = float(input(\"entrer un nombre :\"))\n",
+    "n = float(input(\"entrer un nombre : \"))\n",
     "print(n)"
    ]
   },
@@ -226,10 +248,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ici n est un nombre réel.\n",
+    "Ici n est un nombre réel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comment ne pas utiliser `input`\n",
     "\n",
-    "## Print et l'écriture scientifique\n",
-    "Quand on souhaite imprimer un résultat à l'écran, on utilise la fonction print. Il est souvent utile en sciences de présenter les résultats avec un nombre correct de chiffre significatif.\n"
+    "Imaginons un programme devant calculer le nombre de neutrons d'un atome; nous avons besoin de `A` et de `Z` pour faire le calcul.\n",
+    "\n",
+    "Une (mauvaise) solution serait d'écrire le programme de la manière suivante :\n",
+    "\n",
+    "```python\n",
+    "A = int(input(\"A ?\"))\n",
+    "Z = int(input(\"Z ?\"))\n",
+    "print(\"Nombre de protons : \", A-Z)\n",
+    "```\n",
+    "\n",
+    "ce code nécessite une intéraction avec l'utilisateur pour être utilisé, on ne peut pas l'utiliser de manière automatique pour calculer le nombre de protons d'un ensemble d'atomes => pas bien :)\n",
+    "\n",
+    "La \"bonne\" solution est d'écrire l'action que l'on souhaite faire sous la forme d'une fonction (voir un peu plus loin pour les détails sur les fonctions), en détaillant et documentant les arguments à utiliser, et de faire utiliser cette fonction à l'utilisateur."
    ]
   },
   {
@@ -241,19 +281,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4285714285714286\n"
+      "Nombre de neutrons :  6\n"
      ]
     }
    ],
    "source": [
-    "n = 10\n",
-    "m = 10/7\n",
-    "print(m)"
+    "def calcul_nombre_protons(A, Z):\n",
+    "    \"\"\"\n",
+    "    Calcul et affichage du nombre de neutrons d'un atome\n",
+    "    \n",
+    "    :param A: nombre de masse\n",
+    "    :param Z: numéro atomique\n",
+    "    \"\"\"\n",
+    "    print(\"Nombre de neutrons : \", A-Z)\n",
+    "\n",
+    "    \n",
+    "calcul_nombre_protons(A=12, Z=6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## Print et l'écriture scientifique\n",
+    "Quand on souhaite imprimer un résultat à l'écran, on peut utiliser la fonction print.\n",
+    "\n",
+    "Cependant, dans un notebook jupyter, il n'est pas toujours utile d'utiliser print : en effet, la valeur retournée par la dernière instruction est automatiquement affichée comme résultat de la cellule."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4285714285714286"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Affichage sans \"print\" (notebook jupyter)\n",
+    "n = 10\n",
+    "m = n/7\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4285714285714286\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Affichage avec print\n",
+    "n = 10\n",
+    "m = n/7\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L'instruction print a cependant quelques avantages : il est par exemple souvent utile en sciences de présenter les résultats avec un nombre correct de chiffre significatif."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -543,6 +653,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Format de la Cellule Texte Brut",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
