--- a/05-bases/05-tests.ipynb
+++ b/05-bases/05-tests.ipynb
@@ -6,8 +6,26 @@
    "source": [
     "# Les tests en python\n",
     "\n",
-    "(code sous licence creative commun CC BY-NC-SA BY Alexis Dendiével)\n",
+    "(code sous licence creative commun CC BY-NC-SA BY Alexis Dendiével)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ":download:`Télécharger le pdf <https://pyspc.readthedocs.io/fr/latest/05-bases/05-tests.pdf>`\n",
     "\n",
+    ":download:`Télécharger le notebook <https://pyspc.readthedocs.io/fr/latest/05-bases/05-tests.ipynb>`\n",
+    "\n",
+    ":download:`Lancer le notebook sur binder (lent) <https://mybinder.org/v2/gh/jmbarbier/pyspc/master?filepath=05-bases%2F05-tests.ipynb>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les tests constituent, avec les boucles, l'une des bases fondamentales de la programmation.\n",
     "Régulièrement en effet, nous devons faire des tests afin de dérouler l'algorithme.\n",
     "\n",
@@ -22,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -58,22 +76,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer le numéro atomique de l'élément: 20\n",
-      "cet élément ne fait pas partie des trois premières lignes de la classification\n"
+      "Elément de numéro atomique 3 :\n",
+      "  fait partie des trois premières lignes de la classification\n",
+      "Elément de numéro atomique 5 :\n",
+      "  fait partie des trois premières lignes de la classification\n"
      ]
     }
    ],
    "source": [
     "# premier test\n",
     "\n",
-    "# demander le numéro atomique\n",
-    "Z = int(input(\"entrer le numéro atomique de l'élément: \"))\n",
-    "\n",
-    "# test vérifiant si l'élément fait partie des trois premières lignes\n",
-    "if Z<= 18:\n",
-    "    print(\"cet élément fait partie des trois premières lignes de la classification\")\n",
-    "else:\n",
-    "    print(\"cet élément ne fait pas partie des trois premières lignes de la classification\")"
+    "def ligne(Z):\n",
+    "    \"\"\"\n",
+    "    Dit si un élément fait partie des trois premières lignes du tableau périodique.\n",
+    "    \n",
+    "    :param Z: numéro atomique\n",
+    "    \"\"\"\n",
+    "    # test vérifiant si l'élément fait partie des trois premières lignes\n",
+    "    print(\"Elément de numéro atomique\", Z, \":\")\n",
+    "    if Z<= 18:\n",
+    "        print(\"  fait partie des trois premières lignes de la classification\")\n",
+    "    else:\n",
+    "        print(\"  ne fait pas partie des trois premières lignes de la classification\")\n",
+    "        \n",
+    "ligne(3)\n",
+    "ligne(5)"
    ]
   },
   {
@@ -89,25 +116,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nous nous nous proposons de comparer les valeurs des forces de gravitation et électromagnétiques pour deux objets A et B\n",
-      "Entrer la valeur de la masse m1 (en kg): 1\n",
-      "Entrer la valeur la charge q1 en multiple de e, la charge élémentaire :1\n",
-      "Entrer la valeur de la masse m2 (en kg): 1\n",
-      "Entrer la valeur la charge q1 en multiple de e, la charge élémentaire :1\n",
-      "Entrer la distance (en mètre) séparant m1 et m2 1\n",
-      "la valeur de la force de gravitation est:          6.67e-11  N\n",
-      "cette force est attractive\n",
-      "la valeur de la force électromagnétique est:       2.30e-28  N\n",
-      "cette force est répulsif\n",
-      "la force de gravitation est prépondérante\n",
-      "le rapport de ces deux forces est:                 2.89e+17\n"
+      "Comparaison des forces de gravitation et électromagnétiques : \n",
+      "  - objet 1 : masse 5.00e-07 kg, charge 6.40e-17 C\n",
+      "  - objet 2 : masse 5.00e-07 kg, charge 6.40e-17 C\n",
+      "\n",
+      "Résultat:\n",
+      "\n",
+      "- la valeur de la force de gravitation est: 1.85e-12  N\n",
+      "    cette force est attractive\n",
+      "- la valeur de la force électromagnétique est: 4.10e-12  N\n",
+      "    cette force est répulsive\n",
+      "- la force électromagnétique est prépondérante\n",
+      "- le rapport de ces deux forces est: 2.21e+00\n"
      ]
     }
    ],
@@ -115,47 +142,59 @@
     "# comparaison des forces de gravitation et électromagnétique\n",
     "# entre deux masses m1 et m2 de charge q1 et q2 séparées d'une distance d\n",
     "\n",
-    "# les constantes utilisées\n",
-    "G = 6.67e-11\n",
-    "k = 9.0e9\n",
-    "e = 1.6e-19\n",
+    "def comparaison_forces(m1, e1, m2, e2, d):\n",
+    "    \"\"\"\n",
+    "    Comparaison des forces de gravitation et électromagnétique entre deux\n",
+    "    masses m1 et m2 (en kg), de charge q1 et q2 (en multiple de e, la\n",
+    "    charge élémentaire), séparées d'une distance d (en mètres)\n",
+    "    \n",
+    "    :param m1: masse m1 (en kg)\n",
+    "    :param e1: charge q1 (en multiple de e)\n",
+    "    :param m2: masse m2 (en kg)\n",
+    "    :param e2: charge q2 (en multiple de e)\n",
+    "    :param d: distance séparant m1 et m2 (en mètres)  \n",
+    "        \"\"\"\n",
+    "    # les constantes utilisées\n",
+    "    G = 6.67e-11\n",
+    "    k = 9.0e9\n",
+    "    e = 1.6e-19\n",
     "\n",
-    "# présentation du programme\n",
-    "print(\"nous nous nous proposons de comparer les valeurs des forces de gravitation et électromagnétiques pour deux objets A et B\")\n",
+    "    # présentation du programme\n",
+    "    print(\"Comparaison des forces de gravitation et électromagnétiques : \")\n",
+    "    print(\"  - objet 1 : masse {0:.2e} kg, charge {1:.2e} C\".format(m1, e1*e))\n",
+    "    print(\"  - objet 2 : masse {0:.2e} kg, charge {1:.2e} C\".format(m2, e2*e))\n",
     "\n",
-    "# entrée des données\n",
-    "m1 = float(input('Entrer la valeur de la masse m1 (en kg): '))\n",
-    "e1 = float(input('Entrer la valeur la charge q1 en multiple de e, la charge élémentaire :'))\n",
-    "m2 = float(input('Entrer la valeur de la masse m2 (en kg): '))\n",
-    "e2 = float(input('Entrer la valeur la charge q1 en multiple de e, la charge élémentaire :'))\n",
-    "d = float(input('Entrer la distance (en mètre) séparant m1 et m2 '))\n",
+    "    # caractère attractif ou répulsif\n",
+    "    if e1*e2 > 0:\n",
+    "        caractere = \"répulsive\"\n",
+    "    else:\n",
+    "        caractere = \"attractif\"\n",
     "\n",
-    "# caractère attractif ou répulsif\n",
-    "if e1*e2 > 0:\n",
-    "    caractere = \"répulsif\"\n",
-    "else:\n",
-    "    caractere = \"attractif\"\n",
+    "    # calcul des forces\n",
+    "    FG = G*m1*m2/d**2\n",
+    "    FE = abs(k*e*e1*e*e2/d**2)\n",
     "\n",
-    "# calcul des forces\n",
-    "FG = G*m1*m2/d**2\n",
-    "FE = abs(k*e*e1*e*e2/d**2)\n",
+    "    # comparaison des forces\n",
+    "    if FG > FE:\n",
+    "        preponderant = \"force de gravitation\"\n",
+    "        comparaison = FG/FE\n",
+    "    else:\n",
+    "        preponderant = \"force électromagnétique\"\n",
+    "        comparaison = FE/FG\n",
     "\n",
-    "# comparaison des forces\n",
-    "if FG > FE:\n",
-    "    preponderant = \"force de gravitation\"\n",
-    "    comparaison = FG/FE\n",
-    "else:\n",
-    "    preponderant = \"force électromagnétique\"\n",
-    "    comparaison = FE/FG\n",
+    "    # impression des résultats\n",
     "\n",
-    "# impression des résultats\n",
+    "    print(\"\\nRésultat:\\n\")\n",
+    "    print(\"- la valeur de la force de gravitation est: {0:.2e}\".format(FG), ' N')\n",
+    "    print(\"    cette force est attractive\")\n",
+    "    print(\"- la valeur de la force électromagnétique est: {0:.2e}\".format(FE), ' N')\n",
+    "    print(\"    cette force est\", caractere)\n",
+    "    print(\"- la\", preponderant, \"est prépondérante\")\n",
+    "    print(\"- le rapport de ces deux forces est: {0:.2e}\".format(comparaison))\n",
     "\n",
-    "print('{:50}'.format(\"la valeur de la force de gravitation est: \"), \"{0:.2e}\".format(FG), ' N')\n",
-    "print(\"cette force est attractive\")\n",
-    "print('{:50}'.format(\"la valeur de la force électromagnétique est: \"), \"{0:.2e}\".format(FE), ' N')\n",
-    "print(\"cette force est\", caractere)\n",
-    "print(\"la\", preponderant, \"est prépondérante\")\n",
-    "print('{:50}'.format(\"le rapport de ces deux forces est: \"),\"{0:.2e}\".format(comparaison))\n"
+    "    \n",
+    "# Utilisation de la fonction\n",
+    "comparaison_forces(m1=5e-7, e1=400, m2=5e-7, e2=400, d=3e-6)"
    ]
   },
   {
@@ -172,68 +211,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer le numéro atomique de l'élément: 12\n",
-      "cet élément fait partie de la troisième ligne de la classification\n"
+      "Elément de numéro atomique Z =  7\n",
+      "  fait partie de la deuxième ligne de la classification\n",
+      "Elément de numéro atomique Z =  1\n",
+      "  fait partie de la première ligne de la classification\n",
+      "Elément de numéro atomique Z =  16\n",
+      "  fait partie de la troisième ligne de la classification\n",
+      "Elément de numéro atomique Z =  33\n",
+      "   ne fait pas partie des trois premières lignes de la classification\n"
      ]
     }
    ],
    "source": [
     "# test imbriqué\n",
-    "\n",
-    "# demander le numéro atomique\n",
-    "Z = int(input(\"entrer le numéro atomique de l'élément: \"))\n",
-    "\n",
-    "# test vérifiant si l'élément fait partie des trois premières lignes\n",
-    "if Z<= 2:\n",
-    "    print(\"cet élément fait partie de la première ligne de la classification\")\n",
-    "elif Z <=10:\n",
-    "    print(\"cet élément fait partie de la deuxième ligne de la classification\")\n",
-    "elif Z <=18:\n",
-    "    print(\"cet élément fait partie de la troisième ligne de la classification\")\n",
-    "else:\n",
-    "    print(\"cet élément ne fait pas partie des trois premières lignes de la classification\")"
+    "def ligne(Z):\n",
+    "    \"\"\"\n",
+    "    Indique la ligne dont fait partie l'élément\n",
+    "    \n",
+    "    :param Z: numéro atomique\n",
+    "    \"\"\"\n",
+    "    print(\"Elément de numéro atomique Z = \",Z)\n",
+    "    # test vérifiant si l'élément fait partie des trois premières lignes\n",
+    "    if Z<= 2:\n",
+    "        print(\"  fait partie de la première ligne de la classification\")\n",
+    "    elif Z <=10:\n",
+    "        print(\"  fait partie de la deuxième ligne de la classification\")\n",
+    "    elif Z <=18:\n",
+    "        print(\"  fait partie de la troisième ligne de la classification\")\n",
+    "    else:\n",
+    "        print(\"   ne fait pas partie des trois premières lignes de la classification\")\n",
+    "        \n",
+    "# Utilisation\n",
+    "ligne(7)\n",
+    "ligne(1)\n",
+    "ligne(16)\n",
+    "ligne(33)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quelques compléments:\n",
-    "    - le test égal se note ==\n",
-    "    - pour des instructions simples, on peut utiliser la forme compacte"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "entrer le nombre x 12\n",
-      "12.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# on demande une valeur pour x\n",
-    "x = float(input(\"entrer le nombre x \"))\n",
-    "\n",
-    "# test avec instruction unique\n",
-    "if x>0: print(x)"
+    "Attention, erreur fréquente : le test égal se note `==`, et pas `=` (assignation de variable)\n"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Format de la Cellule Texte Brut",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
