--- a/05-bases/06-boucles.ipynb
+++ b/05-bases/06-boucles.ipynb
@@ -6,8 +6,26 @@
    "source": [
     "# Les boucles en python\n",
     "\n",
-    "(code sous licence creative commun CC BY-NC-SA BY Alexis Dendiével)\n",
+    "(code sous licence creative commun CC BY-NC-SA BY Alexis Dendiével)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ":download:`Télécharger le pdf <https://pyspc.readthedocs.io/fr/latest/05-bases/06-boucles.pdf>`\n",
     "\n",
+    ":download:`Télécharger le notebook <https://pyspc.readthedocs.io/fr/latest/05-bases/06-boucles.ipynb>`\n",
+    "\n",
+    ":download:`Lancer le notebook sur binder (lent) <https://mybinder.org/v2/gh/jmbarbier/pyspc/master?filepath=05-bases%2F06-boucles.ipynb>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les bouclent constituent, avec les tests, un élément indispensable de programmation. Il existe deux types de boucles:\n",
     "- La boucle for qui se réitère quand on parcourt un itérable par exemple, \n",
     "- la boucle while qui se réitère tant qu'une condition est remplie\n",
@@ -123,25 +141,10 @@
    ],
    "source": [
     "# liste des 18 premiers éléments chimiques de la classification\n",
-    "elements = (\n",
-    "\"Hydrogène H\",\n",
-    "\"Hélium He\",\n",
-    "\"Lithium Li\",\n",
-    "\"Béryllium Be\",\n",
-    "\"Bore B\",\n",
-    "\"Carbone C\",\n",
-    "\"Azote N\",\n",
-    "\"Oxygène O\",\n",
-    "\"Fluor F\",\n",
-    "\"Néon Ne\",\n",
-    "\"Sodium Na\",\n",
-    "\"Magnésium Mg\",\n",
-    "\"Aluminium Al\",\n",
-    "\"Silicium Si\",\n",
-    "\"Phosphore P\",\n",
-    "\"Soufre S\",\n",
-    "\"Chlore Cl\",\n",
-    "\"Argon Ar\")\n",
+    "elements = [ \"Hydrogène H\", \"Hélium He\", \"Lithium Li\", \"Béryllium Be\",\n",
+    "\"Bore B\", \"Carbone C\", \"Azote N\", \"Oxygène O\", \"Fluor F\", \"Néon Ne\",\n",
+    "\"Sodium Na\", \"Magnésium Mg\", \"Aluminium Al\", \"Silicium Si\", \"Phosphore P\",\n",
+    "\"Soufre S\", \"Chlore Cl\", \"Argon Ar\"]\n",
     "\n",
     "# la boucle qui parcours la liste des éléments et les imprime\n",
     "for element in elements:\n",
@@ -164,58 +167,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer un numéro atomique inférieur ou égal à 18: 15\n",
-      "les  15 premiers éléments de la classification sont :\n",
-      "Hydrogène H\n",
-      "Hélium He\n",
-      "Lithium Li\n",
-      "Béryllium Be\n",
-      "Bore B\n",
-      "Carbone C\n",
-      "Azote N\n",
-      "Oxygène O\n",
-      "Fluor F\n",
-      "Néon Ne\n",
-      "Sodium Na\n",
-      "Magnésium Mg\n",
-      "Aluminium Al\n",
-      "Silicium Si\n",
-      "Phosphore P\n"
+      "les  4 premiers éléments de la classification sont :\n",
+      " -  Hydrogène H\n",
+      " -  Hélium He\n",
+      " -  Lithium Li\n",
+      " -  Béryllium Be\n",
+      "\n",
+      "tsss...lisez la doc : le numéro atomique doit être inférieur à 18 !!\n"
      ]
     }
    ],
    "source": [
-    "# liste des 18 premiers éléments chimiques de la classification\n",
-    "elements = (\n",
-    "\"Hydrogène H\",\n",
-    "\"Hélium He\",\n",
-    "\"Lithium Li\",\n",
-    "\"Béryllium Be\",\n",
-    "\"Bore B\",\n",
-    "\"Carbone C\",\n",
-    "\"Azote N\",\n",
-    "\"Oxygène O\",\n",
-    "\"Fluor F\",\n",
-    "\"Néon Ne\",\n",
-    "\"Sodium Na\",\n",
-    "\"Magnésium Mg\",\n",
-    "\"Aluminium Al\",\n",
-    "\"Silicium Si\",\n",
-    "\"Phosphore P\",\n",
-    "\"Soufre S\",\n",
-    "\"Chlore Cl\",\n",
-    "\"Argon Ar\")\n",
     "\n",
-    "# demande du numéro atome maximal\n",
-    "Z = int(input(\"entrer un numéro atomique inférieur ou égal à 18: \"))\n",
+    "def affichage_premiers_elements(Zmax):\n",
+    "    \"\"\"\n",
+    "    Affiche les éléments de numéro atomique inférieur ou égal à Z_max\n",
+    "    \n",
+    "    :param Z_max: numéro atomique maximal (inférieur à 18)\n",
+    "    \"\"\"\n",
+    "    # liste des 18 premiers éléments chimiques de la classification\n",
+    "    elements = [\n",
+    "    \"Hydrogène H\", \"Hélium He\", \"Lithium Li\", \"Béryllium Be\", \"Bore B\",\n",
+    "    \"Carbone C\", \"Azote N\", \"Oxygène O\", \"Fluor F\", \"Néon Ne\", \"Sodium Na\",\n",
+    "    \"Magnésium Mg\", \"Aluminium Al\", \"Silicium Si\", \"Phosphore P\", \"Soufre S\",\n",
+    "    \"Chlore Cl\", \"Argon Ar\"]\n",
     "\n",
-    "# test pour vérifier que Z est inférieur ou égal à 18\n",
-    "if Z <=18: \n",
-    "    print(\"les \", Z, \"premiers éléments de la classification sont :\")\n",
-    "    for i in range(Z):\n",
-    "        print (elements[i])\n",
-    "else:\n",
-    "    print(\"le numéro atomique est supérieur à 18\")"
+    "    # test pour vérifier que Z est inférieur ou égal à 18\n",
+    "    if Zmax <=18: \n",
+    "        print(\"les \", Zmax, \"premiers éléments de la classification sont :\")\n",
+    "        for i in range(Zmax):\n",
+    "            print (\" - \",elements[i])\n",
+    "    else:\n",
+    "        print(\"tsss...lisez la doc : le numéro atomique doit être inférieur à 18 !!\")\n",
+    "        \n",
+    "affichage_premiers_elements(4)\n",
+    "print(\"\")\n",
+    "affichage_premiers_elements(33)"
    ]
   },
   {
@@ -236,60 +223,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entrer un numéro atomique inférieur ou égal à 18: 15\n",
-      "les  15 premiers éléments de la classification sont :\n",
-      "Hydrogène H\n",
-      "Hélium He\n",
-      "Lithium Li\n",
-      "Béryllium Be\n",
-      "Bore B\n",
-      "Carbone C\n",
-      "Azote N\n",
-      "Oxygène O\n",
-      "Fluor F\n",
-      "Néon Ne\n",
-      "Sodium Na\n",
-      "Magnésium Mg\n",
-      "Aluminium Al\n",
-      "Silicium Si\n",
-      "Phosphore P\n"
+      "les  4 premiers éléments de la classification sont :\n",
+      " -  Hydrogène H\n",
+      " -  Hélium He\n",
+      " -  Lithium Li\n",
+      " -  Béryllium Be\n",
+      "\n",
+      "nan, j'affiche toujours pas : le numéro atomique est supérieur à 18\n"
      ]
     }
    ],
    "source": [
-    "# liste des 18 premiers éléments chimiques de la classification\n",
-    "elements = (\n",
-    "\"Hydrogène H\",\n",
-    "\"Hélium He\",\n",
-    "\"Lithium Li\",\n",
-    "\"Béryllium Be\",\n",
-    "\"Bore B\",\n",
-    "\"Carbone C\",\n",
-    "\"Azote N\",\n",
-    "\"Oxygène O\",\n",
-    "\"Fluor F\",\n",
-    "\"Néon Ne\",\n",
-    "\"Sodium Na\",\n",
-    "\"Magnésium Mg\",\n",
-    "\"Aluminium Al\",\n",
-    "\"Silicium Si\",\n",
-    "\"Phosphore P\",\n",
-    "\"Soufre S\",\n",
-    "\"Chlore Cl\",\n",
-    "\"Argon Ar\")\n",
     "\n",
-    "# demande du numéro atome maximal\n",
-    "Z = int(input(\"entrer un numéro atomique inférieur ou égal à 18: \"))\n",
+    "def affichage_premiers_elements_avec_while(Zmax):\n",
+    "    \"\"\"\n",
+    "    Affiche les éléments de numéro atomique inférieur ou égal à Z_max\n",
+    "    \n",
+    "    :param Z_max: numéro atomique maximal (inférieur à 18)\n",
+    "    \"\"\"\n",
+    "    # liste des 18 premiers éléments chimiques de la classification\n",
+    "    elements = [ \"Hydrogène H\", \"Hélium He\", \"Lithium Li\", \"Béryllium Be\",\n",
+    "    \"Bore B\", \"Carbone C\", \"Azote N\", \"Oxygène O\", \"Fluor F\", \"Néon Ne\",\n",
+    "    \"Sodium Na\", \"Magnésium Mg\", \"Aluminium Al\", \"Silicium Si\", \"Phosphore P\",\n",
+    "    \"Soufre S\", \"Chlore Cl\", \"Argon Ar\"]\n",
     "\n",
-    "# test pour vérifier que Z est inférieur ou égal à 18\n",
-    "if Z <=18: \n",
-    "    print(\"les \", Z, \"premiers éléments de la classification sont :\")\n",
-    "    numero = 1\n",
-    "    while numero <=Z:\n",
-    "        print (elements[numero-1])\n",
-    "        numero = numero + 1\n",
-    "else:\n",
-    "    print(\"le numéro atomique est supérieur à 18\")"
+    "    # test pour vérifier que Z est inférieur ou égal à 18\n",
+    "    if Zmax <=18: \n",
+    "        print(\"les \", Zmax, \"premiers éléments de la classification sont :\")\n",
+    "        numero = 1\n",
+    "        while numero <=Zmax:\n",
+    "            print (\" - \",elements[numero-1])\n",
+    "            numero = numero + 1\n",
+    "    else:\n",
+    "        print(\"nan, j'affiche toujours pas : le numéro atomique est supérieur à 18\")\n",
+    "        \n",
+    "affichage_premiers_elements_avec_while(4)\n",
+    "print(\"\")\n",
+    "affichage_premiers_elements_avec_while(32)\n"
    ]
   },
   {
@@ -303,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -371,6 +341,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Format de la Cellule Texte Brut",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
