--- a/05-bases/09-fichiers-csv.ipynb
+++ b/05-bases/09-fichiers-csv.ipynb
@@ -10,6 +10,19 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ":download:`Télécharger le pdf <https://pyspc.readthedocs.io/fr/latest/05-bases/09-fichiers-csv.pdf>`\n",
+    "\n",
+    ":download:`Télécharger le notebook <https://pyspc.readthedocs.io/fr/latest/05-bases/09-fichiers-csv.ipynb>`\n",
+    "\n",
+    ":download:`Lancer le notebook sur binder (lent) <https://mybinder.org/v2/gh/jmbarbier/pyspc/master?filepath=05-bases%2F09-fichiers-csv.ipynb>`"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.\tEnregistrer ou exporter le fichier contenant votre tableau de données sous format .csv dans le dossier contenant votre notebook (fichier .ipynb) ou votre programme python (fichier.py).\n",
+    "1.\tEnregistrer ou exporter le fichier contenant votre tableau de données sous format .csv dans le dossier contenant votre notebook (fichier .ipynb) ou votre programme python (fichier.py). Attention, pour l'utilisation avec l'ENT Nero version 2018, petite subtilité à la fin.\n",
+    "\n",
     "    -\tDans Regressi, enregistrer le fichier sous le format (type) OpenOffice, CSV (choisir « Vrai CSV » dans la fenêtre qui s’affiche alors).\n",
     "    -\tDans Loggerpro, exporter le fichier comme CSV…\n",
     "    -\tDans Aviméca, exporter les données dans Regressi puis vous reporter à la ligne ci-dessus.\n",
@@ -34,7 +48,7 @@
    "source": [
     "Voici une capture d'écran du fichier parabole.csv obtenu à l'aide de Regavi/Regressi ouvert sous Excel\n",
     "\n",
-    "![Capture%20fichier%20excel.JPG](09_fichiers_csv/Capture_fichier_excel.JPG)"
+    "![Capture sous excel](09-fichiers-csv-capture-excel.jpg)"
    ]
   },
   {
@@ -43,7 +57,7 @@
    "source": [
     "Le même fichier ouvert sous Jupiter Notebook\n",
     "\n",
-    "![Capture%20fichier%20jupyter.JPG](09_fichiers_csv/Capture_fichier_jupyter.JPG)"
+    "![Capture sous jupyter](09-fichiers-csv-capture-jupyter.jpg)"
    ]
   },
   {
@@ -166,6 +180,12 @@
    "outputs": [],
    "source": [
     "def charge_fichier_csv(fichier):\n",
+    "    \"\"\"\n",
+    "    Charge un fichier csv et le renvoie sous forme de tableau\n",
+    "    \n",
+    "    :param: nom de fichier\n",
+    "    :returns: tableau des données\n",
+    "    \"\"\"\n",
     "    with open(fichier, 'r', encoding='utf-8') as f :\n",
     "        rfichier = csv.reader(f, delimiter=\";\")\n",
     "        tableau=[]\n",
@@ -203,7 +223,7 @@
     "# Le début du chemin n'a pas besoin d'être spécifié si le fichier \n",
     "# .csv se trouve dans le même dossier que ce fichier notebook\n",
     "\n",
-    "tableau = charge_fichier_csv('09_fichiers_csv/parabole.csv')\n",
+    "tableau = charge_fichier_csv('09-fichiers-csv-parabole.csv')\n",
     "t=tableau[0]\n",
     "print(t)\n",
     "x=tableau[1]\n",
@@ -211,9 +231,43 @@
     "y=tableau[2]\n",
     "print(y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**WARNING : subtilité pour le jupyter ENT Nero 2018**\n",
+    "\n",
+    "Même si vous avez mis vos fichiers CSV dans le même répertoire que votre fichier ipynb dans votre espace \"Mes documents\" de l'ENT, l'importation des données csv ne fonctionnera pas (en passant, l'affichage des images de ce notebook non plus, d'ailleurs..)\n",
+    "\n",
+    "En fait sur cette version 2018, lors de l'exécution d'un notebook ipython, l'ENT copie ce fichier dans un répertoire temporaire vide... donc raté pour les fichers CSV.\n",
+    "\n",
+    "![Fichiers dans le même répertoire](09-fichiers-csv-nero-jupyter-1.png)\n",
+    "\n",
+    "Il existe une solution qui ressemble un peu à un bricolage, mais qui fonctionne en attendant 2019 :\n",
+    "\n",
+    "- dans le notebook jupyter, cliquer sur \"Fichier > Ouvrir\"\n",
+    "- le répertoire de travail de votre notebook apparaît alors dans un onglet séparé\n",
+    "- vous pouvez alors y placer votre fichier csv avec le bouton \"Upload\"\n",
+    "\n",
+    "![Mettre le fichier dans le répertoire de travail - étape 1](09-fichiers-csv-nero-jupyter-2.png)\n",
+    "\n",
+    "![Mettre le fichier dans le répertoire de travail - étape 2](09-fichiers-csv-nero-jupyter-3.png)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette difficulté devrait ne plus exister à la rentrée 2019."
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Format de la Cellule Texte Brut",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
