--- a/05-bases/04-operations_basiques.ipynb
+++ b/05-bases/04-operations_basiques.ipynb
@@ -4,8 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quelques opérations basiques en Python\n",
-    "## Opération mathématiques  usuelles"
+    "# Quelques opérations basiques en Python"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ":download:`Télécharger le pdf <https://pyspc.readthedocs.io/fr/latest/05-bases/03-operations_basiques.pdf>`\n",
+    "\n",
+    ":download:`Télécharger le notebook <https://pyspc.readthedocs.io/fr/latest/05-bases/03-operations_basiques.ipynb>`\n",
+    "\n",
+    ":download:`Lancer le notebook sur binder (lent) <https://mybinder.org/v2/gh/jmbarbier/pyspc/master?filepath=05-bases%2F03-operations_basiques.ipynb>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Opération mathématiques usuelles"
    ]
   },
   {
@@ -17,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -28,7 +47,7 @@
        "3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +74,7 @@
        "4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +101,7 @@
        "27"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,18 +246,18 @@
     "\n",
     "Les tests suivants sont disponibles\n",
     "\n",
-    "- == vérifie une égalité\n",
-    "- != différent\n",
-    "- < inférieur\n",
-    "- > supérieur\n",
-    "- >= supérieur ou égal\n",
-    "- <= inférieur ou égal\n",
+    "- `==` : vérifie une égalité\n",
+    "- `!=` : différent\n",
+    "- `<` : inférieur\n",
+    "- `>` : supérieur\n",
+    "- `>=` : supérieur ou égal\n",
+    "- `<=` : inférieur ou égal\n",
     "\n",
     "Les opérateurs logiques ou opérateurs booléens correspondent aux opérations logiques suivantes:\n",
     "\n",
-    "- et (and)\n",
-    "- ou (or)\n",
-    "- non (not)\n",
+    "- `and` : et\n",
+    "- `or` : ou\n",
+    "- `not` : non\n",
     "\n",
     "La réponse possible à ces différentes opérations est: vraie (1) ou fausse (0).\n",
     "L'exemple ci-dessous utilise l'opération \"ou\" pour déterminer si l'on peut calculer la somme de deux fractions dans un premier temps. Si la réponse est positive alors les valeurs du numérateur et du dénominateur sont affichées."
@@ -253,36 +272,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "3\n",
-      "1\n",
-      "0\n",
-      "dénominateur nul interdit\n"
+      "Somme de 1/3 + 1/0\n",
+      "  -> Impossible : dénominateur nul interdit\n",
+      "Somme de 1/3 + 3/5\n",
+      "   -> Résultat : 20/15\n"
      ]
     }
    ],
    "source": [
-    "a= int(input())\n",
-    "b= int(input())\n",
-    "c= int(input())\n",
-    "d= int(input())\n",
-    "if b==0 or d==0:\n",
-    "    print(\"dénominateur nul interdit\")\n",
-    "else:\n",
-    "    print(a*d+c*d)\n",
-    "    print (b*d)\n",
-    "# pour exécuter le programme: entrer successivement les quatre valeurs choisies, le résultat s'affiche.\n"
+    "def somme_fractions(a,b,c,d):\n",
+    "    print(\"Somme de {0}/{1} + {2}/{3}\".format(a,b,c,d))\n",
+    "    if b==0 or d==0:\n",
+    "        print(\"  -> Impossible : dénominateur nul interdit\")\n",
+    "    else:\n",
+    "        print(\"   -> Résultat : {0}/{1}\".format(a*d+c*d, b*d))\n",
+    "\n",
+    "somme_fractions(1,3,1,0)\n",
+    "somme_fractions(1,3,3,5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Format de la Cellule Texte Brut",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
